refactor: change progress-bar layout

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,23 @@
-$main-background: linear-gradient(303.79deg, #F0C3FC -53.74%, #D7BEFC -4.64%, #BCB1FC 40.96%, #A1AEFC 83.05%, #94BDFC 127.47%, #8EC5FC 170.73%),
-linear-gradient(0deg, #84FAB0 0%, #85F9BC 21.87%, #88F8D7 42.19%, #8BF6F5 60.94%, #8EDDF5 80.73%, #8FD3F4 100%);
+$main-background:
+    linear-gradient(
+        303.79deg,
+        #F0C3FC -53.74%,
+        #D7BEFC -4.64%,
+        #BCB1FC 40.96%,
+        #A1AEFC 83.05%,
+        #94BDFC 127.47%,
+        #8EC5FC 170.73%
+    ),
+    linear-gradient(
+        0deg,
+        #84FAB0 0%,
+        #85F9BC 21.87%,
+        #88F8D7 42.19%,
+        #8BF6F5 60.94%,
+        #8EDDF5 80.73%,
+        #8FD3F4 100%
+    )
+;
 
 $btn-text-transform: capitalize;
 $spacers-steps: 35 !default;
