--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,3 +42,16 @@ $muted: rgba(black, .5);
         border-radius: 8px;
     }
 };
+
+@mixin side-absolute-btn {
+    position: absolute;
+    left: -8px;
+
+    &:before {
+        opacity: 0 !important;
+    }
+
+    .v-ripple__container {
+        opacity: 0 !important;
+    }
+}
