feat: made 'DraggableListItem' component independent with slot for item content in it, made 'TodoListItem' component, with todo list item content

--- a/src/styles/ui.scss
+++ b/src/styles/ui.scss
@@ -1,3 +1,13 @@
 .v-list-item {
     min-height: unset;
 }
+
+.no-ripple {
+    &:before {
+        opacity: 0 !important;
+    }
+
+    .v-ripple__container {
+        opacity: 0 !important;
+    }
+}
